<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@drawable/login_signup_00"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.SignupFragment">


    <LinearLayout
        android:layout_width="@dimen/_356dp"
        android:layout_height="@dimen/_680dp"
        android:layout_marginTop="@dimen/_64dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        >

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/profile_pic"
            android:layout_width="@dimen/_164dp"
            android:layout_height="@dimen/_164dp"
            android:scaleType="centerCrop"
            app:shapeAppearanceOverlay="@style/circle"
            android:background="@color/peach"
            android:layout_marginBottom="@dimen/_36dp"
            android:padding="@dimen/_8dp"
            />





        <EditText
            android:id="@+id/txtEmail"
            style="@style/edit_text_style"
            android:hint="@string/email_hint"
            android:drawableLeft="@drawable/baseline_person_24"
        />
        <EditText
            android:id="@+id/txtPassword"
            style="@style/edit_text_style"
            android:hint="@string/password_hint"
            android:drawableLeft="@drawable/baseline_key_24"
            />
        <EditText
            android:id="@+id/txtConfirmPassword"
            style="@style/edit_text_style"
            android:hint="@string/confPassword_hint"
            android:paddingStart="@dimen/_52dp"
            />
        <Button
            android:id="@+id/btnSignUp"
            android:text="@string/btnSignUp"
            android:background="@drawable/design_widget_et"
            android:textAllCaps="false"
            style="@style/button_style"
            />

    </LinearLayout>


</RelativeLayout>